exports[`createStoryFactories creates parent-aware story trees > handles it node wrapped in describe 1`] = `
{
  "type": "group",
  "id": "auth",
  "title": "auth",
  "children": {
    "type": "story",
    "id": "auth__logins-successfully",
    "title": "logins successfully",
    "parents": [
      {
        "id": "auth",
        "title": "auth"
      }
    ]
  }
}
`;

exports[`createStoryFactories creates parent-aware story trees > handles it node wrapped in describe wrapped in describe 1`] = `
{
  "type": "group",
  "id": "auth",
  "title": "auth",
  "children": {
    "type": "group",
    "id": "auth__login-form",
    "title": "login form",
    "children": {
      "type": "story",
      "id": "auth__login-form__shows-submit-button",
      "title": "shows submit button",
      "parents": [
        {
          "id": "auth",
          "title": "auth"
        },
        {
          "id": "login-form",
          "title": "login form"
        }
      ]
    }
  }
}
`;

exports[`createStoryFactories creates parent-aware story trees > handles single it node 1`] = `
{
  "type": "story",
  "id": "single-story",
  "title": "single story",
  "parents": []
}
`;
